# eczane-yardimci-program

./: Cargo.toml  EczaneYardimci.csproj  README.md  barkod_listesi.json  data.json  eczane_yardimci.py  gemini-config.js  go.mod  index.html  main.js  package-lock.json  package.json  pom.xml  requirements.txt  script.js  simple-test.html  stok-sistemi.js  styles.css  test-api.html  test-dermokozmetik.html  test_barkod.py  test_program.py  test_qr.py
